--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.9.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.12.1",
+    "react-toastify": "^9.1.3",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
