--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-jwt": "^1.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.12.1",
     "react-toastify": "^9.1.3",
-    "uniqid": "^5.4.0"
+    "uniqid": "^5.4.0",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
